[project]
name = "uw-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "loadenv>=0.1.1",
    "pydantic>=2.12.5",
    "streamlit>=1.53.1",
]
